src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__in_out_variable_out_of_order.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: diagnostics
---
error[E030]: Missing inout parameter: myOtherInOut
  ┌─ <internal>:9:9
  │
9 │         fb(myInOut := out2); // invalid: missing in-out param
  │         ^^ Missing inout parameter: myOtherInOut

error[E031]: Expected a reference for parameter myInOut because their type is InOut
   ┌─ <internal>:10:15
   │
10 │         fb(0, TRUE);  // invalid: one in-out is a literal, the other is missing
   │               ^^^^ Expected a reference for parameter myInOut because their type is InOut

error[E030]: Missing inout parameter: myOtherInOut
   ┌─ <internal>:10:9
   │
10 │         fb(0, TRUE);  // invalid: one in-out is a literal, the other is missing
   │         ^^ Missing inout parameter: myOtherInOut


